Add map to homepage

--- a/cs.html
+++ b/cs.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>City Spotters</title>
     <link rel="stylesheet" href="csstyles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="content">
+  <div>
     <h1>City Spotters</h1>
     <h2>work from anywhere. literally</h2>
     <h3>discover the community's best remote work-friendly spots in your city</h3>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-    </ul>
   </div>
+    <div class="container"> 
+        <img src="test_cityspotters.png"> 
+    </div>
 </body>
 </html>
