Organising files into respective folders

--- a/homepage/cs.html
+++ b/homepage/cs.html
@@ -9,7 +9,7 @@
 <body>
   <div>
     <h1>City Spotters</h1>
-    <h2>work from anywhere - literally.</h2>
+    <h2>work from anywhere. literally</h2>
     <h3>discover the community's best remote work-friendly spots in your city</h3>
   </div>
     <div class="container"> 
